--- a/index.html
+++ b/index.html
@@ -23,17 +23,22 @@
             display: table;
             opacity: 1;
             animation: fadein 3s forwards;
+            background-color: black;
+        }
+        h1 {
+            color: white;
         }
         h2 {
             font-weight: 300;
             margin-bottom: 25px;
+            color: white;
         }
         img {
-            width: 25%; /* Image width */
+            width: 40%; /* Image width */
             border: 0; /* For IE */
             /* Aspect ratio of image, gives initial dimension to prevent text moving down once image is loaded */
             /* When changing logo, change this also */
-            aspect-ratio: 512 / 512;
+            aspect-ratio: 760 / 324;
         }
         #main {
             vertical-align: middle;
@@ -73,15 +78,16 @@
 
         @media screen and (max-width:600px) {
             img {
-                width: 60%;
-                transpose: scale(0.8);
+                width: 90%;
             }
             h1 {
                 font-size: 1.3em;
+                color: white;
             }
             h2 {
                 margin: 1.1em;
                 font-size: 1.1em;
+                color: white;
             }
             #progress {
                 width: 80%; /* Bar width */
@@ -93,7 +99,6 @@
 <body>
     <div id="main">
         <img src="logo.png" alt="Logo Image">
-        <h1>FlyCore</h1>
         <h2>Coming soon. </h2>
     </div>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
