--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             display: table;
             opacity: 1;
             animation: fadein 3s forwards;
-            background-color: black;
+            background-color: #0F1A20;
         }
         h1 {
             color: white;
@@ -36,18 +36,23 @@
             margin-bottom: 25px;
             color: white;
         }
+        h3 {
+            font-weight: 300;
+            margin-bottom: 25px;
+            color: white;
+        }
         p {
             font-weight: 300;
             margin-bottom: 25px;
             color: white;
         }
-        img {
-            width: 40%; /* Image width */
-            border: 0; /* For IE */
-            /* Aspect ratio of image, gives initial dimension to prevent text moving down once image is loaded */
-            /* When changing logo, change this also */
-            aspect-ratio: 760 / 324;
-        }
+        /*img {*/
+        /*    width: 40%; !* Image width *!*/
+        /*    border: 0; !* For IE *!*/
+        /*    !* Aspect ratio of image, gives initial dimension to prevent text moving down once image is loaded *!*/
+        /*    !* When changing logo, change this also *!*/
+        /*    aspect-ratio: 760 / 324;*/
+        /*}*/
         #main {
             vertical-align: middle;
             display: table-cell;
@@ -88,16 +93,11 @@
             a {
                 color: #3F83F8;
             }
-            img {
-                width: 90%;
-            }
+            /*img {*/
+            /*    width: 90%;*/
+            /*}*/
             h1 {
                 font-size: 1.3em;
-                color: white;
-            }
-            h2 {
-                margin: 1.1em;
-                font-size: 1.1em;
                 color: white;
             }
             p {
@@ -107,15 +107,31 @@
             #progress {
                 width: 80%; /* Bar width */
             }
+            #logo {
+                max-width: 100%; /* Limit the width to the parent container's width */
+                height: auto; /* Maintain aspect ratio */
+                max-height: 100px; /* Adjust this value based on your preference */
+            }
+        }
+        #logo {
+            max-width: 100%; /* Limit the width to the parent container's width */
+            height: auto; /* Maintain aspect ratio */
+            max-height: 100px; /* Adjust this value based on your preference */
+        }
+        #logo-outer {
+            margin-left: 10px;
+            margin-right: 10px;
         }
     </style>
     <title>Coming Soon</title>
 </head>
 <body>
     <div id="main">
-        <img src="logo.png" alt="Logo Image">
-        <h2>Software for aviation SMBs. Coming soon.</h2>
-        <h2><a href="mailto:info@getflycore.com">Reach out</a> to learn more. </h2>
+        <div id="logo-outer">
+            <img src="flycore-two-tone.svg" alt="Logo Image" id="logo">
+            <h3>Software for aviation SMBs. Coming soon.</h3>
+            <h3><a href="mailto:info@getflycore.com">Reach out</a> to learn more. `</h3>
+        </div>
     </div>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
 </body>
