--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <div id="logo-outer">
             <img src="flycore-two-tone.svg" alt="Logo Image" id="logo">
             <h3>Software for aviation SMBs. Coming soon.</h3>
-            <h3><a href="mailto:info@getflycore.com">Reach out</a> to learn more.</h3>
+            <h3>Reach out to learn more. info@getflycore.com</h3>
         </div>
     </div>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
